--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     
@@ -26,7 +27,7 @@
 
 
     <!-- game -->
-    <div class="container game">
+    <div class="container hidden" id="game">
 
         <div class="row">
             <div class="col">
@@ -54,7 +55,7 @@
 
 
     <!-- post-game -->
-    <div class="container" id="post">
+    <div class="container hidden" id="post">
 
         <div class="row">
             <div class="col">
